--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zerointermittency/utils",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "scripts": {
     "test": "nyc node --max_old_space_size=4096 test/index.js",
@@ -25,6 +25,7 @@
     "async": "^2.6.0",
     "benchmark": "^2.1.4",
     "chai": "^4.1.2",
+    "jwt-simple": "^0.5.1",
     "mocha": "^3.5.0",
     "nyc": "^11.3.0",
     "test-console": "^1.0.0",
