--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@zerointermittency/utils",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
     "test": "nyc node --max_old_space_size=4096 test/index.js",
+    "test-sync": "node --trace-sync-io --max_old_space_size=4096 test/index.js",
     "test-nyan": "REPORTER=nyan node --max_old_space_size=4096 test/index.js",
     "benchmark": "node --max_old_space_size=4096"
   },
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "@zerointermittency/date": "^1.0.0",
+    "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "debug": "^3.1.0",
     "i18n-iso-countries": "^3.3.0",
